--- a/module3_solution/css/styles.css
+++ b/module3_solution/css/styles.css
@@ -2,7 +2,7 @@
 #header-nav {
     background-color: darkgray;
     border-radius: 0;
-    border: 2px solid black;
+    border: 0;
 }
 
 .navbar-brand h1 {
@@ -18,3 +18,46 @@
 .navbar-brand a:hover, .navbar-brand a:focus {
     text-decoration: none;
 }
+
+#nav-list a {
+    color: #80bad1;
+    font-weight: bold;
+  }
+  
+  #nav-list a:hover {
+    background: rgb(236, 236, 209);
+  }
+  
+  .navbar-header button.navbar-toggle, .navbar-header .icon-bar {
+    border: 1px solid #80bad1;
+  }
+  
+  .navbar-header button.navbar-toggle {
+    clear: both;
+    margin-top: -30px;
+  }
+  
+  #page-title {
+    font-weight: bold;
+    margin-bottom: 30px;
+  }
+  
+  #main-text {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  
+  .text-background {
+    height: 3000px;
+    padding: 20px 40px 20px 40px;
+    background-color: darkgray;
+    overflow: hidden;
+  }
+  
+  h3 {
+    font-weight: bold;
+  }
+
+  p {
+    font-weight: bold;
+  }
