--- a/module3_solution/css/styles.css
+++ b/module3_solution/css/styles.css
@@ -1,64 +1,77 @@
 /** HEADER **/
 #header-nav {
-    background-color: darkgray;
     border-radius: 0;
     border: 0;
 }
 
-
-.navbar-brand h1 {
-    font-weight: bold;
-    color: black;
-    font-size: 1.6em;
-    
-    margin-top: 10px;
-    margin-bottom: 20px;
-    line-height: .75;
+.container {
+  margin: 0;
+  padding: 0;
+}
+.navbar{
+	border-radius: 0px;
+  background-color: darkgray;
+  border: 1px solid black;
 }
 
-.navbar-brand a:hover, .navbar-brand a:focus {
-    text-decoration: none;
+.navbar-brand{
+  font-size: 35px;
+  padding-left: 25px;
+  color: black;
 }
 
-#nav-list a {
-    color: #80bad1;
-    font-weight: bold;
-  }
-  
-  #nav-list a:hover {
-    background: rgb(236, 236, 209);
-  }
-  
-  .navbar-header button.navbar-toggle, .navbar-header .icon-bar {
-    border: 1px solid #80bad1;
-  }
-  
-  .navbar-header button.navbar-toggle {
-    clear: both;
-    margin-top: -30px;
-  }
-  
-  #page-title {
-    font-weight: bold;
-    margin-bottom: 30px;
-  }
-  
-  #main-text {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-  
-  .text-background {
-    height: 3000px;
-    padding: 20px 40px 20px 40px;
-    background-color: darkgray;
-    overflow: hidden;
-  }
-  
-  h3 {
-    font-weight: bold;
-  }
+.navbar-brand:hover{
+	color: white;
+}
 
-  p {
-    font-weight: bold;
-  }
+.nav{
+	margin: 0;
+	padding: 0;
+}
+
+.navbar-nav{
+  font-size: 25px;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  background-color: white;
+}
+
+.navbar-toggle{
+	border: 2px solid black;
+	margin-right: 25px;
+}
+
+#page-title {
+  font-weight: bold;
+}
+
+.icon-bar{
+	background-color: black;
+}
+
+li {
+  border: 1px solid black;
+}
+
+.menu-item {
+  color: black;
+}
+
+.row{
+	margin: 20px;
+}
+
+.section {
+	margin: 20px;
+	width: auto;
+	height: auto;
+	color: black;
+	background-color: rgba(0,0,0,0.2);
+	font-family: "Comic Sans MS", cursive, sans-serif;
+	padding: 20px;
+}
+
+h3 {
+  font-weight: bold;
+}
